Change module versions and attempt to cleanup maven