@@ -6,7 +6,7 @@
 
 	<groupId>com.github.lapissea</groupId>
 	<artifactId>Jorth</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<properties>
 		<java.version>18</java.version>
@@ -74,5 +74,21 @@
 			<url>https://repository.ow2.org/nexus/content/repositories/releases</url>
 		</repository>
 	</repositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<compilerArgs>--enable-preview</compilerArgs>
+					<release>${java.version}</release>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
