@@ -10,15 +10,19 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 
-		<cfsVersion>1.0-SNAPSHOT</cfsVersion>
-
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+		<cfsVersion>1.0</cfsVersion>
 		<jmh.version>1.34</jmh.version>
 	</properties>
-	<groupId>com.github.lapissea</groupId>
+
+	<parent>
+		<groupId>com.github.lapissea</groupId>
+		<artifactId>jdatablockfs</artifactId>
+		<version>1.0</version>
+	</parent>
 	<artifactId>jdatablockfs.run</artifactId>
-	<version>${cfsVersion}</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
@@ -77,18 +81,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>${maven.compiler.release}</release>
 					<compilerArgs>--enable-preview</compilerArgs>
+					<release>${java.version}</release>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.17</version>
-				<configuration>
-					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
