@@ -4,15 +4,6 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.github.lapissea</groupId>
-	<artifactId>jdatablockfs</artifactId>
-	<packaging>pom</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<modules>
-		<module>jdatablockfs.run</module>
-		<module>Jorth</module>
-	</modules>
-
 	<properties>
 		<java.version>18</java.version>
 		<maven.compiler.release>${java.version}</maven.compiler.release>
@@ -20,7 +11,51 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<cfsVersion>1.0</cfsVersion>
 	</properties>
+
+	<groupId>com.github.lapissea</groupId>
+	<artifactId>jdatablockfs</artifactId>
+	<packaging>pom</packaging>
+	<version>1.0</version>
+	<modules>
+		<module>jdatablockfs.run</module>
+		<module>jdatablockfs.tools</module>
+		<module>Jorth</module>
+	</modules>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.github.lapissea</groupId>
+			<artifactId>jlapisutil</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.github.lapissea</groupId>
+			<artifactId>Jorth</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.roaringbitmap</groupId>
+			<artifactId>RoaringBitmap</artifactId>
+			<version>0.9.25</version>
+		</dependency>
+		<dependency>
+			<groupId>ru.vyarus</groupId>
+			<artifactId>generics-resolver</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.github.lapissea</groupId>
+				<artifactId>jlapisutil</artifactId>
+				<version>1.0.11</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
@@ -35,37 +70,6 @@
 					<target>${java.version}</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.17</version>
-				<configuration>
-					<argLine>--enable-preview</argLine>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>com.github.lapissea</groupId>
-			<artifactId>jlapisutil</artifactId>
-			<version>1.0.11</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.lapissea</groupId>
-			<artifactId>Jorth</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.roaringbitmap</groupId>
-			<artifactId>RoaringBitmap</artifactId>
-			<version>0.9.25</version>
-		</dependency>
-		<dependency>
-			<groupId>ru.vyarus</groupId>
-			<artifactId>generics-resolver</artifactId>
-			<version>3.0.3</version>
-		</dependency>
-	</dependencies>
 </project>
